--- a/ProjetoFarmacia/src/com/projetofarmacia/interfaces/TelaEstoquista.form
+++ b/ProjetoFarmacia/src/com/projetofarmacia/interfaces/TelaEstoquista.form
@@ -59,7 +59,7 @@
     <AuxValue name="FormSettings_layoutCodeTarget" type="java.lang.Integer" value="1"/>
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
-    <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
+    <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="10"/>
   </AuxValues>
 
   <Layout>
@@ -76,6 +76,10 @@
   </Layout>
   <SubComponents>
     <Container class="javax.swing.JDesktopPane" name="painel">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JDesktopPane()"/>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+      </AuxValues>
 
       <Layout>
         <DimensionLayout dim="0">
