--- a/ProjetoFarmacia/src/com/projetofarmacia/interfaces/TelaCaixa.form
+++ b/ProjetoFarmacia/src/com/projetofarmacia/interfaces/TelaCaixa.form
@@ -125,12 +125,12 @@
                               </Group>
                           </Group>
                           <EmptySpace min="-2" max="-2" attributes="0"/>
-                          <Component id="jScrollPane2" pref="183" max="32767" attributes="0"/>
+                          <Component id="jScrollPane2" pref="161" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jLabel2" min="-2" pref="31" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
-                          <Component id="ScrollPane" max="32767" attributes="0"/>
+                          <Component id="ScrollPane" pref="413" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="22" pref="22" max="-2" attributes="0"/>
@@ -170,7 +170,7 @@
             <Component class="javax.swing.JTable" name="tabelaProduto">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="7" rowCount="0">
+                  <Table columnCount="8" rowCount="0">
                     <Column editable="false" title="Produto" type="java.lang.Object"/>
                     <Column editable="false" title="Qtd" type="java.lang.Object"/>
                     <Column editable="false" title="Pre&#xe7;o" type="java.lang.Object"/>
@@ -178,10 +178,16 @@
                     <Column editable="false" title="funcionario" type="java.lang.Object"/>
                     <Column editable="false" title="Farmacia" type="java.lang.Object"/>
                     <Column editable="false" title="idProd" type="java.lang.Object"/>
+                    <Column editable="false" title="idvenda" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
@@ -259,7 +265,9 @@
                       <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="campoTotal" min="-2" pref="153" max="-2" attributes="0"/>
-                      <EmptySpace pref="622" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="btnCancelarCompra" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnCartao" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnDinheiro" min="-2" max="-2" attributes="0"/>
@@ -276,6 +284,7 @@
                               <Component id="campoTotal" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                               <Component id="btnCartao" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="btnDinheiro" alignment="3" max="32767" attributes="0"/>
+                              <Component id="btnCancelarCompra" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -315,6 +324,9 @@
                   <Font name="Segoe UI Black" size="18" style="1"/>
                 </Property>
               </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+              </AuxValues>
             </Component>
             <Component class="javax.swing.JButton" name="btnDinheiro">
               <Properties>
@@ -356,6 +368,26 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCartaoActionPerformed"/>
               </Events>
             </Component>
+            <Component class="javax.swing.JButton" name="btnCancelarCompra">
+              <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="db" green="98" red="34" type="rgb"/>
+                </Property>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI Black" size="11" style="0"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/com/projetofarmacia/resources/basket_delete.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="CANCELAR COMPRA"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelarCompraActionPerformed"/>
+              </Events>
+            </Component>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
@@ -368,7 +400,7 @@
             <Component class="javax.swing.JTable" name="tabelaReservados">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="7" rowCount="0">
+                  <Table columnCount="8" rowCount="0">
                     <Column editable="false" title="Nome" type="java.lang.Object"/>
                     <Column editable="false" title="qtd" type="java.lang.Object"/>
                     <Column editable="false" title="tarja" type="java.lang.Object"/>
@@ -376,11 +408,17 @@
                     <Column editable="false" title="func" type="java.lang.Object"/>
                     <Column editable="false" title="produto" type="java.lang.Object"/>
                     <Column editable="false" title="id prod" type="java.lang.Object"/>
+                    <Column editable="false" title="idvenda" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="0" minWidth="0" prefWidth="0" resizable="true">
                       <Title/>
                       <Editor/>
                       <Renderer/>
